--- a/index.html
+++ b/index.html
@@ -105,6 +105,19 @@
                                 <span class="stat-label">Eventos</span>
                             </div>
                         </div>
+                        <!-- Galería de eventos / comunidad: imágenes en img/about-me/ -->
+                        <div class="about-gallery" aria-label="Galería de eventos">
+                            <div class="gallery-item"><img src="img/about-me/1.jpg" alt="Evento 1 - Comunidad" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/2.jpg" alt="Evento 2 - Presentación" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/3.jpg" alt="Evento 3 - Taller" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/4.jpg" alt="Evento 4 - Meetup" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/5.jpg" alt="Evento 5 - Charlas" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/6.png" alt="Evento 6 - Panel" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/7.jpeg" alt="Evento 7 - Comunidad" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/8.jpg" alt="Evento 8 - Comunidad" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/9.jpg" alt="Evento 9 - Comunidad" loading="lazy"></div>
+                            <div class="gallery-item"><img src="img/about-me/10.JPG" alt="Evento 10 - Comunidad" loading="lazy"></div>
+                        </div>
                     </div>
                 </div>
             </div>
